# libi86

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  LICENSE  Makefile.in  README.asciidoc  README.linux-build.md  README.md  aclocal.m4  acsite.m4  autogen.sh  check-common.m4  configure  configure.ac
examples/: Makefile.in  configure  configure.ac  dpmii86.c  drivei86.c  joyi86.c  lz4mi86.c
host-ack/: Makefile.in  configure  configure.ac  make-config.sh  make-wrap-h.sh  wrap-cpp.sh
host-ack/bios/: bios-disk.s  bios-equiplist.s  bios-joystick.s  bios-keybrd.s  bios-memsize.s  bios-printer.s  bios-serialcom.s  bios-timeofday.s
host-ack/conio/: cputs.c  inp.s  inpw.s  kbhit.s  libi86-con-in-fd.s  libi86-con-out-fd.s  libi86-vsscanf.s  outp.s  outpw.s  putch.c  ungetch.s
host-ack/direct/: chdir.s  getdrive.s  libi86-msdos-do-getdcwd.s  mkdir.s  rmdir.s
host-ack/dos/: bdos.s  dos-allocmem.s  dos-close.s  dos-commit.s  dos-creat.s  dos-creatnew.s  dos-findclose.s  dos-findfirst.c  dos-findnext.c  dos-freemem.s  dos-getdate.s  dos-getdiskfree.s  dos-getdrive.s  dos-getfileattr.s  dos-getftime.s  dos-gettime.s  dos-getvect.s  dos-keep.s  dos-open.c  dos-read.s  dos-setblock.s  dos-setdate.s  dos-setdrive.s  dos-setfileattr.s  dos-setftime.s  dos-settime.s  dos-spawn.s  dos-wait.s  dos-write.s  dosexterr.s  getswitchar.s  getsysvars.s  intdos.s  intdosx.s  libi86-msdos-do-findfirst.s  libi86-msdos-do-findnext.s  libi86-msdos-do-open.s  libi86-msdos-do-truename.s  libi86-msdos-parse-to-fcb.s  libi86-msdos-set-dta.s  (+10 more)
host-ack/dos-dbcs/: dos-get-dbcs-lead-table.s  libi86-msdos-dbcs-lead-p.s
host-ack/graph/: libi86-vid-get-curs-shape.s  libi86-vid-get-ega-info.s  libi86-vid-get-ega-pal-reg.s  libi86-vid-get-vga-dac-reg.s  libi86-vid-int-0x10.s  libi86-vid-outmem-do.c  libi86-vid-set-ega-pal-reg.s  libi86-vid-set-vga-dac-reg.s  setbkcolor.c  setvideomode.c
host-ack/i86/: delay.c  disable.s  enable.s  int86.c  int86x.c  intr.c  intrf.c  libi86-CV-FP.s  libi86-bc-int86.c  libi86-bc-int86x.c  libi86-get-cs.s  libi86-get-flags.s  libi86-get-ss.s  libi86-int86-do.s  libi86-int86x-do.s  libi86-intr-dispatch.s  libi86-intrf-do.s  nosound.s  segread.s  sound.s
host-ack/kompress/: libi86-lz4-full-len.s  lz4cpy.s  lz4len.s
host-ack/process/: getpid.s  spawnlx.s
host-ack/stdio/: vsscanf.s
host-ack/stdlib/: fullpath.c  libi86-get-osmajor-osminor.s  libi86-get-psp.s  libi86-ultoa-uldiv.s  ltoa.c  ultoa.c
host-ack/string/: fmemchr.s  fmemcmp.s  fmemcpy.s  fmempcpy.s  fmemset.s  fstpcpy.s  fstrcpy.s  fstrlen.s  libi86-fmemmove-backward.s
host-gcc/: Makefile.in  configure  configure.ac  make-wrap-h.sh
host-gcc/bios/: bios-disk.c  bios-equiplist.S  bios-memsize.S  bios-printer.S  bios-serialcom.S  bios-timeofday.c
host-gcc/conio/: cgets.c  clreol.c  clrscr.c  cprintf.c  cputs.c  cscanf.c  delline.c  getch.c  getpass.c  highvideo.c  inp.S  inpw.S  insline.c  kbhit.c  libi86-bc-cputs.c  libi86-bc-vcprintf.c  libi86-con-in-fd.c  libi86-con-out-fd.c  libi86-vid-is-console.c  lowvideo.c  normvideo.c  outp.S  outpw.S  textbackground.c  textcolor.c  textmode.c  ungetch.S  vcprintf-autofloat.S  vcprintf.c  vcscanf-autofloat.S  vcscanf.c  wherex.c  wherey.c  window.c
host-gcc/dir/: searchpath.c
host-gcc/direct/: chdir.c  libi86-msdos-do-getdcwd.c  mkdir1.c  mkdir2.c  rmdir.c
host-gcc/dos/: bdos.S  dos-allocmem.c  dos-commit.S  dos-creat.S  dos-creat.c  dos-creatnew.S  dos-creatnew.c  dos-findfirst.c  dos-findnext.c  dos-freemem.c  dos-getdate.S  dos-getdiskfree.c  dos-getftime.S  dos-gettime.S  dos-getvect.S  dos-getvect.c  dos-keep.S  dos-open.c  dos-read.c  dos-setblock.c  dos-setdate.S  dos-setdrive.S  dos-setftime.S  dos-settime.S  dos-setvect.S  dos-setvect.c  dos-spawn.S  dos-wait.S  dos-write.c  dosexterr.S  getswitchar.S  getsysvars.c  libi86-call5-tiny.S  libi86-call5.S  libi86-dpmi-bdos.c  libi86-dpmi-buf.c  libi86-dpmi-str.c  libi86-dpmi.c  libi86-ret-really-set-errno.c  libi86-ret-set-errno.S  (+7 more)
host-gcc/dos-dbcs/: dos-free-dbcs-lead-table.c  dos-get-dbcs-lead-table.c  libi86-msdos-dbcs-lead-p.c
host-gcc/dpmi/: dpmi-hosted.S  dpmiallocatedosmemoryblock.S  dpmiallocateldtdescriptors.S  dpmiallocatememoryblock.S  dpmicreatecsaliasdesc.S  dpmifreedosmemoryblock.S  dpmifreeldtdescriptor.S  dpmifreememoryblock.S  dpmigetcapabilities.S  dpmigetdescriptor.S  dpmigetnextselectorincrval.S  dpmigetsegmentbaseaddress.S  dpmigetvendorspecificapi.S  dpmigetvirtualintstate.S  dpmiidle.S  dpmimodedetect.S  dpmisetdescaccrights.S  dpmisetdescriptor.S  dpmisetsegmentbaseaddress.S  dpmisetsegmentlimit.S  dpmisimulaterealmodeint.S  libi86-dpmi-32bit.S  libi86-dpmi16-shim.S
host-gcc/graph/: gettextposition.c  libi86-setvideomode-svga.c  libi86-vid-state.c  outtext.c  scrolltextwindow.c  setbkcolor.c  settextcolor.c  settextposition.c  setvideomode.c
host-gcc/i86/: delay.c  disable.S  enable.S  int86.c  int86x.c  intrf.c  libi86-bc-int86.c  libi86-bc-int86x.c  libi86-int86-do.S  libi86-int86x-do.S  libi86-intr-do.S  libi86-intrf-do.S  libi86-sound-by-divisor.S  nosound.S  sound.S
host-gcc/kompress/: libi86-lz4-full-len.S  lz4cpy.S  lz4len.S
host-gcc/process/: getpid.S  libi86-init-causeway.S  spawnlx.S
host-gcc/r-msdos.d/: libi86.spec.in
host-gcc/stdlib/: fullpath.c  lltoa.c  ltoa.c  osmajor-osminor.S  psp.S  ulltoa.c  ultoa.c
host-gcc/string/: fmemchr.S  fmemcmp.S  fmemcpy.S  fmempcpy.S  fmemset.S  fstpcpy.S  fstrcat.c  fstrcpy.S  fstrlen.S  libi86-fmemmove-backward.S
ia16/: Makefile.in  bdos.S  bios-disk.c  bios-equiplist.S  bios-joystick.S  bios-keybrd.c  bios-memsize.S  bios-timeofday.c  bios.h  call-cvt.h  cgets.c  clearscreen.c  clreol.c  configure  configure.ac  conio.h  cprintf.c  cputs.c  cscanf.c  delay.c  disable.S  dos-allocmem.S  dos-allocmem.c  dos-close.S  dos-commit.S  dos-findfirst.c  dos-findnext.c  dos-freemem.S  dos-freemem.c  dos-getdrive.S  dos-getfileattr.S  dos-getvect.c  dos-setdrive.S  dos-setfileattr.S  dos.h  dpmi-hosted.S  dpmi.h  dpmifreedosmemoryblock.S  dpmigetdescriptor.S  dpmisegmenttodescriptor.S  (+85 more)
ia16/bios/: bios-disk.c  (+3 more)
(+276 files in other folders)
